data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectConditionEvaluation_4360.wast
;; 9. **Test Description**: Trigger an indirectly called function intended to result in stack underflow, surrounded by `br_if` to verify condition checking when stack underflow is encountered.      **Specific Constraint**: Correctly managing and detecting operand stack underflow.      **Incorrect Condition Evaluation**: Assess if `br_if` evaluates conditions correctly even during stack underflow scenarios.

(assert_invalid
  (module
    (type (func (param i32) (return i32)))
    (table 1 funcref)
    (elem (i32.const 0) $f)
    (func $f (param i32) (result i32)
      (get_local 0)
    )
    (func (result i32)
      (block (br_if 0 
        (call_indirect (type 0) (i32.const 0))))
      (i32.const 42)
    )
  )
  "stack underflow"
)